Tue May 25 18:35:24 1999  Andreas Kupries  <a.kupries@westend.com>

	* generic/memchanInt.h: Made the header usable for C++ compilers.

	* unix/Makefile.in: See below.

	* win/makefile.vc(5): Added rules for new object files.

	* generic/counter.c: Moved handle generation into separate
	  file. Added usage of mutexes for thread enabled tcl to make
	  handle generation safe.

	* generic/memchan.c: Moved declarations and initialization code
	  into separate files (memchanInt.h, init.c).

	* doc/nodes/cmds.node: Added description of the provided command.

Tue May 11 22:29:18 1999  Andreas Kupries  <a.kupries@westend.com>

	* ---------------- Ready to release 1.8 --------------------
	
	* unix/Makefile.in, PREPARE, tests: Added testsuite to memchan.

Mon Apr 12 17:27:08 1999  Andreas Kupries  <a.kupries@westend.com>

	* generic/memchan.c: Fixed error in definition of EXPORT, as
	  reported by <Petteri.Kettunen@picker.fi>.

	* win/makefile.vc(5): Fixed some errors in the win makefiles, as
	  reported by <Petteri.Kettunen@picker.fi>.

Thu Mar 25 12:30:40 1999  Andreas Kupries  <a.kupries@westend.com>

	* ---------------- Ready to release 1.7 --------------------

Wed Mar 24 13:15:36 1999  Andreas Kupries  <a.kupries@westend.com>

	* win/pkgIndex.tcl: Separate package index, no way to use one DLL
	  for all versions of tcl. Stubs no help ?

	* unix/configure.in, unix/Makefile.in: Added all necessary code to
	  detect and use stubs appropriately.

	* unix/pkgIndex.tcl.in: Added code to check package dependency on
	  tcl version, which is dependent on the usage of stubs too.

Mon Mar 22 09:57:05 1999  Andreas Kupries  <a.kupries@westend.com>

	* memchan.c: Started to work on the changes required by 8.1 and
	  the new stub-mechanism.

	* configure.in (TCL_LIB/INCLUDE_DIR): Added 8.0.4 and 8.0.5 to the
	  list of paths to search.

Sun Dec 20 19:54:08 1998  Andreas Kupries  <a.kupries@westend.com>

	* memchan.c: Changed definition of panic to allow co-existence