@@ -61,6 +61,7 @@ MCDLL		=	$(MC).dll
 INSTALLDIR	=	$(TCL)\lib\$(MC)
 
 MCOBJS		=	$(TMPDIR)\memchan.obj	\
+			$(TMPDIR)\fifo.obj	\
 			$(TMPDIR)\init.obj	\
 			$(TMPDIR)\counter.obj
 
